--- a/ToggleableOverlays/UI/src/mods/InfoViewButton/InfoViewButton.module.scss
+++ b/ToggleableOverlays/UI/src/mods/InfoViewButton/InfoViewButton.module.scss
@@ -1,21 +1,94 @@
+@keyframes entry {
+  0% {
+    opacity: 0;
+    transform: scale(0.65);
+    height: 0rem;
+    border-top-width: 0rem;
+    border-bottom-width: 0rem;
+  }
+  25% {
+    opacity: 0.25;
+    transform: scale(0.75);
+    height: 36rem;
+  }
+  100% {
+    opacity: 1;
+    height: 36rem;
+    transform: none;
+  }
+}
+
 .button {
-  background-color: var(--panelColorNormal);
+  animation: entry 0.25s ease-in-out;
+  pointer-events: auto;
   backdrop-filter: var(--panelBlur);
-  color: var(--accentColorNormal);
-  border-top-left-radius: var(--panelRadius);
-  border-top-right-radius: var(--panelRadius);
-  border-bottom-left-radius: var(--panelRadius);
-  border-bottom-right-radius: var(--panelRadius);
-  margin-top: 5rem;
-  padding: 5rem;
+  width: 565rem;
+  height: 36rem;
+  margin-bottom: 3rem;
+  padding: 5rem 10rem;
+  border-radius: 4rem;
+  border: none;
+  transition: background-color 0.15s, color 0.15s, border-top-width 0.15s, border-bottom-width 0.15s;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: var(--menuText1Normal);
+  background-color: var(--panelColorNormal);
+  border-top: solid 2rem transparent;
+  border-bottom: solid 2rem transparent;
 
-  z-index: 9999;
+  & > div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &[disabled] {
+    pointer-events: none !important;
+
+    img {
+      filter: none !important;
+    }
+  }
+
+  &.hidden {
+    display: none;
+  }
+
+  &:active {
+    background-image: none !important;
+    background-color: var(--accentColorDark-focused) !important;
+  }
+
+  &:hover {
+    background-color: var(--panelColorDark);
+  }
+
+  img {
+    width: 24rem;
+    height: 24rem;
+    margin-right: 10rem;
+    transition: background-color 0.15s;
+    background-color: var(--menuText1Normal);
+    mask-size: contain;
+    mask-position: 50% 50%;
+  }
+
+  &.selected {
+    border-bottom-color: var(--accentColorDark-focused) !important;
+  }
 }
 
-.button:hover {
-  background-color: var(--panelColorDark);
-}
+.checkbox {
+  width: 20rem;
+  height: 20rem;
+  border: solid 2rem rgba(255, 255, 255, 0.65);
+  margin-left: 6rem;
+  border-radius: 3rem;
 
-.button:active {
-  filter: brightness(150%);
+  img {
+    width: 16rem;
+    height: 16rem;
+    margin-right: 0rem;
+  }
 }
